# Qiner

./: CMakeLists.txt  Qiner.cpp  Qiner.sln  Qiner.vcxproj  Qiner.vcxproj.filters  README.md  Utils.h  qiner.cpp
src/: K12AndKeyUtil.h  Qiner.cpp  commonFunctions.h  connection.cpp  connection.h  keyUtils.cpp  keyUtils.h  structs.h
